deploy/service-business-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-business-v1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-business
      version: v1
  template:
    metadata:
      labels:
        app: service-business
        version: v1
    spec:
      containers:
      - name: service-business
        image: itmabo/service-business:v1
        imagePullPolicy: Always
        ports:
        - name: main-port
          containerPort: 8080
        volumeMounts:
        - mountPath: /home/log
          name: log-volume
        livenessProbe:
          httpGet:
            path: /service-business/actuator/info
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 3
          successThreshold: 1
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /service-business/actuator/info
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 3
          successThreshold: 1
          failureThreshold: 5
      volumes:
      - name: log-volume
        hostPath:
          path: /home/log
          type: DirectoryOrCreate
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-business-v2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-business
      version: v2
  template:
    metadata:
      labels:
        app: service-business
        version: v2
    spec:
      containers:
      - name: service-business
        image: itmabo/service-business:v2
        imagePullPolicy: Always
        ports:
        - name: main-port
          containerPort: 8080
        volumeMounts:
        - mountPath: /home/log
          name: log-volume
        livenessProbe:
          httpGet:
            path: /service-business/actuator/info
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 3
          successThreshold: 1
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /service-business/actuator/info
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 3
          successThreshold: 1
          failureThreshold: 5
      volumes:
      - name: log-volume
        hostPath:
          path: /home/log
          type: DirectoryOrCreate
---

apiVersion: v1
kind: Service
metadata:
  name: service-business
  namespace: default
  labels:
    app: service-business
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: main-port
  selector:
    app: service-business
  type: ClusterIP
