deploy/network-all.yaml

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-business
spec:
  host: service-business.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-business
spec:
  hosts:
  - '*'
  gateways:
  - istio-system/ingressgateway
  http:
  - match:
    - uri:
        prefix: /service-business
    route:
    - destination:
        host: service-business
        subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-shadow
spec:
  hosts:
  - '*'
  gateways:
  - istio-system/ingressgateway
  http:
  - match:
    - uri:
        prefix: /service-shadow
    rewrite:
      uri: /service-business
    route:
    - destination:
        host: service-business
        subset: v2
