deploy/virtual-service-business-shadow-percent-50.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-business
spec:
  hosts:
  - '*'
  gateways:
  - istio-system/ingressgateway
  http:
  - match:
    - uri:
        prefix: /service-business
    route:
    - destination:
        host: service-business
        subset: v1
    mirror:
      host: service-business
      subset: v2
    mirror_percent: 50
